@@ -41,8 +41,10 @@ public class SlidingMover implements BlockMover
     private List<MyBlockData> savedBlocks = new ArrayList<>();
 
     @SuppressWarnings("deprecation")
-    public SlidingMover(BigDoors plugin, World world, double time, Door door, boolean instantOpen, int blocksToMove, RotateDirection openDirection)
+    public SlidingMover(BigDoors plugin, World world, double time, Door door, boolean instantOpen, int blocksToMove, RotateDirection openDirection,
+                        double multiplier)
     {
+        Util.broadcastMessage("Sliding door mover! multiplier = " + multiplier);
         plugin.getAutoCloseScheduler().cancelTimer(door.getDoorUID());
         this.plugin        = plugin;
         this.world         = world;
@@ -64,23 +66,24 @@ public class SlidingMover implements BlockMover
         moveZ = NS ? this.blocksToMove : 0;
 
         double speed  = 1;
-        double pcMult = plugin.getConfigLoader().pcMultiplier();
+        double pcMult = multiplier;
         pcMult = pcMult == 0.0 ? 1.0 : pcMult;
         int maxSpeed  = 6;
+
         // If the time isn't default, calculate speed.
         if (time != 0.0)
         {
-            speed     = Math.abs(blocksToMove) / time * pcMult;
+            speed     = Math.abs(blocksToMove) / time;
             this.time = time;
         }
 
         // If the non-default exceeds the max-speed or isn't set, calculate default speed.
-        if (time == 0.0 || Math.abs(blocksToMove) / time > maxSpeed)
+        if (time == 0.0 || speed > maxSpeed)
         {
+            speed     = 1.4 * pcMult;
             speed     = speed > maxSpeed ? maxSpeed : speed;
             this.time = Math.abs(blocksToMove) / speed;
         }
-
         tickRate = Util.tickRateFromSpeed(speed);
 
         int index = 0;
