@@ -39,7 +39,7 @@ public class VerticalMover implements BlockMover
     private List<MyBlockData> savedBlocks = new ArrayList<>();
 
     @SuppressWarnings("deprecation")
-    public VerticalMover(BigDoors plugin, World world, double time, Door door, boolean instantOpen, int blocksToMove)
+    public VerticalMover(BigDoors plugin, World world, double time, Door door, boolean instantOpen, int blocksToMove, double multiplier)
     {
         plugin.getAutoCloseScheduler().cancelTimer(door.getDoorUID());
         this.plugin = plugin;
@@ -57,18 +57,18 @@ public class VerticalMover implements BlockMover
         zMax = door.getMaximum().getBlockZ();
 
         double speed  = 1;
-        double pcMult = plugin.getConfigLoader().pcMultiplier();
+        double pcMult = multiplier;
         pcMult = pcMult == 0.0 ? 1.0 : pcMult;
         int maxSpeed  = 6;
         // If the time isn't default, calculate speed.
         if (time != 0.0)
         {
-            speed     = Math.abs(blocksToMove) / time * pcMult;
+            speed     = Math.abs(blocksToMove) / time;
             this.time = time;
         }
 
         // If the non-default exceeds the max-speed or isn't set, calculate default speed.
-        if (time == 0.0 || Math.abs(blocksToMove) / time > maxSpeed)
+        if (time == 0.0 || speed > maxSpeed)
         {
             speed     = blocksToMove < 0 ? 1.7 : 0.8 * pcMult;
             speed     = speed > maxSpeed ? maxSpeed : speed;
