@@ -6,6 +6,7 @@ Alpha 0.1.8.7
 - Soft removed Elevator door type to avoid confusion. When reintroduced (with elevating capabilities), they'll show up as elevators again. Until then, they look and function like portcullises.
 - Removed 1 block depth restriction from portcullises.
 - Added support for 1.14's new blocks.
+- Added missing multipliers for the new door types to the config. Thanks, @kristinr96 for the report!
 
 Alpha 0.1.8.6
 - Connected blocks (i.e. fences, iron bars, panes, etc) now stay connected in portcullises, sliding doors, and elevators in 1.13.* and 1.14.*.
